# kuka_ws

./: README.md
install/: local_setup.sh  setup.sh
install/get_pose_client/share/get_pose_client/: package.bash  package.sh  package.zsh
install/kr16_description/share/kr16_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kr16_description/share/kr16_description/cmake/: kr16_descriptionConfig.cmake
install/kr16_grasping/lib/kr16_grasping/: grasp  grasping  pick_place
install/kr16_grasping/share/kr16_grasping/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kr16_scripts/share/kr16_scripts/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuka_kr16_moveit_config/share/kuka_kr16_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rviz_visual_tools/lib/rviz_visual_tools/: rviz_visual_tools_demo  rviz_visual_tools_imarker_simple_demo
install/rviz_visual_tools/share/rviz_visual_tools/: package.sh
log/: latest_build
src/get_pose_client/: CMakeLists.txt  package.xml
src/get_pose_client/src/: aruco_generator.py  calibration_chessboard.yaml  detect_aruco_marker.py  pose_estimation.py  test_calib.py  test_pose.py  utils.py
src/kr16_description/: CMakeLists.txt
src/kr16_description/meshes/collision/: gripper.stl
src/kr16_description/urdf/: kr16.urdf
src/kr16_grasping/: CMakeLists.txt  package.xml
src/kr16_grasping/launch/: grasp_kuka.launch.py  pick_place.launch.py
src/kr16_grasping/src/: dummy_joint_states.cpp  grasping.cpp  pick_place.cpp
src/kr16_scripts/: CMakeLists.txt
src/kr16_scripts/src/: pick_and_place.cpp
src/kuka_kr16_moveit_config/: CMakeLists.txt
src/kuka_kr16_moveit_config/config/: chomp_planning.yaml  ompl_planning.yaml
src/kuka_kr16_moveit_config/launch/: demo.launch.py  gazebo.launch  planning_context.launch  ros_controllers.launch
(+16 files in other folders)
